src/snapshots/zeek_language_server__ast__test__resolve_type-10.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: u!("port"),
    fqid: u!("port"),
    kind: Builtin(
        Port,
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'port'"),
}
