src/snapshots/zeek_language_server__ast__test__resolve_type-11.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "table[count, string] of int",
    fqid: "table[count, string] of int",
    kind: Type(
        [],
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'table[count, string] of int'",
}
