src/snapshots/zeek_language_server__ast__test__resolve_type-12.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "set[count, string]",
    fqid: "set[count, string]",
    kind: Builtin(
        Set(
            [
                Count,
                String,
            ],
        ),
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'set[count, string]'",
}
