src/snapshots/zeek_language_server__ast__test__resolve_type-13.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "time",
    fqid: "time",
    kind: Type(
        [],
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'time'",
}
