src/snapshots/zeek_language_server__ast__test__resolve_type-14.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "timer",
    fqid: "timer",
    kind: Builtin(
        Timer,
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'timer'",
}
