src/snapshots/zeek_language_server__ast__test__resolve_type-15.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "list of count",
    fqid: "list of count",
    kind: Type(
        [],
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'list of count'",
}
