src/snapshots/zeek_language_server__ast__test__resolve_type-16.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "vector of count",
    fqid: "vector of count",
    kind: Builtin(
        Vector(
            "count",
        ),
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'vector of count'",
}
