src/snapshots/zeek_language_server__ast__test__resolve_type-17.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: u!("file of count"),
    fqid: u!("file of count"),
    kind: Builtin(
        File(
            Count,
        ),
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'file of count'"),
}
