src/snapshots/zeek_language_server__ast__test__resolve_type-18.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "opaque of count",
    fqid: "opaque of count",
    kind: Builtin(
        Opaque(
            Count,
        ),
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'opaque of count'",
}
