src/snapshots/zeek_language_server__ast__test__resolve_type-2.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: "any",
    fqid: "any",
    kind: Builtin(
        Any,
    ),
    is_export: None,
    loc: None,
    documentation: "Builtin type 'any'",
}
