src/snapshots/zeek_language_server__ast__test__resolve_type-3.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: u!("bool"),
    fqid: u!("bool"),
    kind: Builtin(
        Bool,
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'bool'"),
}
