src/snapshots/zeek_language_server__ast__test__resolve_type-4.snap
---
source: src/ast.rs
expression: resolved
---
Decl {
    module: Global,
    id: u!("count"),
    fqid: u!("count"),
    kind: Builtin(
        Count,
    ),
    is_export: None,
    loc: None,
    documentation: u!("Builtin type 'count'"),
}
